--- a/projeto-planilhas.ipynb
+++ b/projeto-planilhas.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "25Kqc41vhdrx",
         "colab": {
@@ -43,11 +43,13 @@
       "source": [
         "from openpyxl import load_workbook\n",
         "import random\n",
+        "from docx import Document\n",
+        "from num2words import num2words\n",
         "\n",
         "def informacoes_iniciais(escola):\n",
         "  meses= (\"\",\"Janeiro\",\"Fevereiro\",\"Março\",\"Abril\",\"Maio\",\"Junho\",\"Julho\",\"Agosto\",\"Setembro\",\"Outubro\",\"Novembro\",\"Dezembro\")\n",
         "  cnpj_buscar = str(input(\"Digite o CNPJ da escola que deseja bucar(sem . ou /, ex:123456789) : \"))\n",
-        "  nome_escola,cnpj_escola,cep_escola,cidade_escola,endereco_escola = buscar_escola(escola,cnpj_buscar)\n",
+        "  nome_escola,cnpj_escola,cep_escola,cidade_escola,endereco_escola,diretor_escola = buscar_escola(escola,cnpj_buscar)\n",
         "  print(f\"\\n este cnpj corresponde a escola {nome_escola}\\n\")\n",
         "  dia = str(input(\"Digite a data dos orçamentos (dia): \"))\n",
         "  mes = int(input(\"Digite a data dos orçamentos (mês): \"))\n",
@@ -57,7 +59,29 @@
         "  mes_digitado = meses[mes]\n",
         "  ano = str(input(\"Digite a data dos orçamentos (ano): \"))\n",
         "  NF = str(input(\"Digite o número da nota fiscal correspondente : \"))\n",
-        "  return nome_escola,cnpj_escola,cep_escola,cidade_escola,endereco_escola,dia,mes,mes_digitado,ano,NF\n",
+        "  return nome_escola,cnpj_escola,cep_escola,cidade_escola,endereco_escola,dia,mes,mes_digitado,ano,NF,diretor_escola,meses\n",
+        "\n",
+        "def opcoes():\n",
+        "  dia_emitida = mes_emitida = ano_emitida = None\n",
+        "  opcao_consolidacao = str(input(\"Você quer consolidação? (S/N) \"))\n",
+        "  if opcao_consolidacao.lower() == \"s\":\n",
+        "    dia_consolidacao = int(input(\"Digite a data da consolidação (dia): \"))\n",
+        "    mes_consolidacao = int(input(\"Digite a data da consolidação (mês): \"))\n",
+        "    ano_consolidacao = str(input(\"Digite a data da consolidação (ano): \"))\n",
+        "\n",
+        "\n",
+        "  opcao_recibo = str(input(\"Você quer recibo? (S/N) \"))\n",
+        "  if opcao_recibo.lower() == \"s\":\n",
+        "    dia_recibo = int(input(\"Digite a data do recibo (dia): \"))\n",
+        "    mes_recibo = int(input(\"Digite a data do recibo (mês): \"))\n",
+        "    ano_recibo = str(input(\"Digite a data do recibo (ano): \"))\n",
+        "    nota = str(input(\"a data que a nota foi emitida é a mesma do recibo? (S/N)\"))\n",
+        "    if nota.lower() == \"n\":\n",
+        "      dia_emitida = int(input(\"Digite a data da emissão (dia): \"))\n",
+        "      mes_emitida = int(input(\"Digite a data da emissão (mês): \"))\n",
+        "      ano_emitida = int(input(\"Digite a data da emissão (ano): \"))\n",
+        "  meio_pagamento = str(input(\"Pago por meio de:  \"))\n",
+        "  return opcao_consolidacao,dia_consolidacao,mes_consolidacao,ano_consolidacao,opcao_recibo,dia_recibo,mes_recibo,ano_recibo,dia_emitida,mes_emitida,ano_emitida,meio_pagamento\n",
         "\n",
         "def buscar_escola(escola,buscador):\n",
         "  for row in range(2,escola.max_row + 1):\n",
@@ -68,12 +92,13 @@
         "      cep_escola = escola.cell(row=row,column = 4).value\n",
         "      cidade_escola = escola.cell(row=row,column = 5).value\n",
         "      endereco_escola = escola.cell(row=row,column = 6).value\n",
-        "      return nome_escola,cnpj_escola,cep_escola,cidade_escola,endereco_escola\n",
+        "      diretor_escola = escola.cell(row=row,column = 7).value\n",
+        "      return nome_escola,cnpj_escola,cep_escola,cidade_escola,endereco_escola,diretor_escola\n",
         "  print(\"Escola não encontrada\")\n",
         "  exit(0)\n",
         "\n",
         "def aplicar_informacoes(pagina_escolas,nce,paper,grafite):\n",
-        "  nome_escola,cnpj_escola,cep_escola,cidade_escola,endereco_escola,dia,mes,mes_digitado,ano,NF =informacoes_iniciais(pagina_escolas)\n",
+        "  nome_escola,cnpj_escola,cep_escola,cidade_escola,endereco_escola,dia,mes,mes_digitado,ano,NF,diretor_escola,meses =informacoes_iniciais(pagina_escolas)\n",
         "  #nce\n",
         "  pagina_nce.cell(row=6,column=1).value = f\"NOSSA SENHORA DA GLÓRIA/SE {dia} DE {mes_digitado.upper()} DE {ano}\"\n",
         "  pagina_nce.cell(row=8,column=1).value = nome_escola\n",
@@ -93,7 +118,73 @@
         "  pagina_grafite.cell(row=10,column=2).value = cep_escola\n",
         "  pagina_grafite.cell(row=10,column=5).value = f\"{dia} DE {mes_digitado.upper()} DE {ano}\"\n",
         "\n",
-        "  return dia,mes,ano,NF\n",
+        "  return dia,mes,ano,NF,diretor_escola,cidade_escola,meses,nome_escola,cnpj_escola\n",
+        "\n",
+        "def numero_por_extenso(num):\n",
+        "  try:\n",
+        "    return num2words(num, lang='pt_BR')\n",
+        "  except NotImplementedError:\n",
+        "    return \"Número muito grande ou formato não suportado pela biblioteca.\"\n",
+        "  except Exception as e:\n",
+        "    return f\"Ocorreu um erro: {e}\"\n",
+        "\n",
+        "def fazer_recibo(arquivo_recibo,total_nce,nome_escola,NF,dia_emitida,mes_emitida,ano_emitida,dia_recibo,mes_recibo,ano_recibo,meio_pagamento,meses):\n",
+        "  for paragrafo in arquivo_recibo.paragraphs:\n",
+        "    if \"<VALOR>\" in paragrafo.text:\n",
+        "      paragrafo.text = paragrafo.text.replace(\"<VALOR>\",round(total_nce,2))\n",
+        "    if \"<EXTENSO>\" in paragrafo.text:\n",
+        "      paragrafo.text = paragrafo.text.replace(\"<EXTENSO>\",numero_por_extenso(float(total_nce)))\n",
+        "    if \"<NOME>\" in paragrafo.text:\n",
+        "      paragrafo.text = paragrafo.text.replace(\"<NOME>\",nome_escola)\n",
+        "    if \"<NF>\" in paragrafo.text:\n",
+        "      paragrafo.text = paragrafo.text.replace(\"<NF>\",NF)\n",
+        "    if \"<DATA_EMISSÃO>\" in paragrafo.text:\n",
+        "      if dia_emitida and mes_emitida and ano_emitida:\n",
+        "        paragrafo.text = paragrafo.text.replace(\"<DATA_EMISSÃO>\",f\"{dia_emitida}/{mes_emitida}/{ano_emitida}\")\n",
+        "      else:\n",
+        "        paragrafo.text = paragrafo.text.replace(\"<DATA_EMISSÃO>\",f\"{dia_recibo}/{mes_recibo}/{ano_recibo}\")\n",
+        "    if \"<MEIO>\" in paragrafo.text:\n",
+        "      paragrafo.text = paragrafo.text.replace(\"<MEIO>\",meio_pagamento)\n",
+        "    if \"<DATA>\" in paragrafo.text:\n",
+        "      paragrafo.text = paragrafo.text.replace(\"<DATA>\",f\"{dia_recibo}/{mes_recibo}/{ano_recibo}\")\n",
+        "    if \"<DIA>\" in paragrafo.text:\n",
+        "      paragrafo.text = paragrafo.text.replace(\"<DIA>\",dia_recibo)\n",
+        "    if \"<MÊS>\" in paragrafo.text:\n",
+        "      paragrafo.text = paragrafo.text.replace(\"<MÊS>\",meses[mes_recibo])\n",
+        "    if \"<ANO>\" in paragrafo.text:\n",
+        "      paragrafo.text = paragrafo.text.replace(\"<ANO>\",ano_recibo)\n",
+        "\n",
+        "def fazer_consolidacao(arquivo_consolidacao,item_numero,produto,un,qt,unit_nce,unit_paper,unit_grafite,diretor_escola,\n",
+        "                       nome_escola,dia_consolidacao,mes_consolidacao,ano_consolidacao,cidade_escola,cnpj_escola,total_nce,total_paper,total_grafite,meses):\n",
+        "    for paragrafo in arquivo_consolidacao.paragraphs:\n",
+        "      if f\"<VALOR{item_numero}>\" in paragrafo.text:\n",
+        "        paragrafo.text = paragrafo.text.replace(f\"<VALOR{item_numero}\",str(produto))\n",
+        "      if f\"<UNIT{item_numero}>\" in paragrafo.text:\n",
+        "        paragrafo.text = paragrafo.text.replace(f\"<UNIT{item_numero}\",str(un))\n",
+        "      if f\"<QUANT{item_numero}>\" in paragrafo.text:\n",
+        "        paragrafo.text = paragrafo.text.replace(f\"<QUANT{item_numero}\",str(qt))\n",
+        "      if f\"<VALOR_A{item_numero}>\" in paragrafo.text:\n",
+        "        paragrafo.text = paragrafo.text.replace(f\"<VALOR_A{item_numero}\",str(unit_nce))\n",
+        "      if f\"<VALOR_B{item_numero}>\" in paragrafo.text:\n",
+        "        paragrafo.text = paragrafo.text.replace(f\"<VALOR_B{item_numero}\",str(unit_paper))\n",
+        "      if f\"<VALOR_C{item_numero}>\" in paragrafo.text:\n",
+        "        paragrafo.text = paragrafo.text.replace(f\"<VALOR_C{item_numero}\",str(unit_grafite))\n",
+        "      if \"<DIRETOR>\" in paragrafo.text:\n",
+        "        paragrafo.text = paragrafo.text.replace(\"DIRETOR\",diretor_escola)\n",
+        "      if \"<CIDADE>\" in paragrafo.text:\n",
+        "        paragrafo.text = paragrafo.text.replace(\"CIDADE\",cidade_escola)\n",
+        "      if \"<DATA>\" in paragrafo.text:\n",
+        "        paragrafo.text = paragrafo.text.replace(\"DATA\",f\"{dia_consolidacao} de {meses[mes_consolidacao]} de {ano_consolidacao}\")\n",
+        "      if \"<TOTAL_A>\" in paragrafo.text:\n",
+        "        paragrafo.text = paragrafo.text.replace(\"TOTAL_A\",round(total_nce,2))\n",
+        "      if \"<TOTAL_B>\" in paragrafo.text:\n",
+        "        paragrafo.text = paragrafo.text.replace(\"TOTAL_B\",total_paper)\n",
+        "      if \"<TOTAL_C>\" in paragrafo.text:\n",
+        "        paragrafo.text = paragrafo.text.replace(\"TOTAL_C\",total_grafite)\n",
+        "      if \"<NOME>\" in paragrafo.text:\n",
+        "        paragrafo.text = paragrafo.text.replace(\"NOME\",nome_escola)\n",
+        "      if \"<CNPJ>\" in paragrafo.text:\n",
+        "        paragrafo.text = paragrafo.text.replace(\"CNPJ\",cnpj_escola)\n",
         "\n",
         "arquivo_nce = load_workbook(\"MODELO NCE.xlsx\")\n",
         "pagina_nce = arquivo_nce[\"Matriz\"]\n",
@@ -104,12 +195,17 @@
         "arquivo_grafite = load_workbook(\"MODELO GRAFITE.xlsx\")\n",
         "pagina_grafite = arquivo_grafite.active\n",
         "\n",
+        "arquivo_consolidacao = Document(\"MODELO CONSOLIDACAO.docx\")\n",
+        "\n",
+        "arquivo_recibo = Document(\"MODELO RECIBO.docx\")\n",
+        "\n",
         "arquivo_controle = load_workbook(\"MODELO CONTROLE.xlsx\")\n",
         "pagina_controle = arquivo_controle.active\n",
         "\n",
         "arquivo_escolas = load_workbook(\"escolas.xlsx\")\n",
         "pagina_escolas = arquivo_escolas.active\n",
-        "dia,mes,ano,NF = aplicar_informacoes(pagina_escolas,pagina_nce,pagina_paper,pagina_grafite)\n",
+        "dia,mes,ano,NF,diretor_escola,cidade_escola,meses,nome_escola,cnpj_escola = aplicar_informacoes(pagina_escolas,pagina_nce,pagina_paper,pagina_grafite)\n",
+        "opcao_consolidacao,dia_consolidacao,mes_consolidacao,ano_consolidacao,opcao_recibo,dia_recibo,mes_recibo,ano_recibo,dia_emitida,mes_emitida,ano_emitida,meio_pagamento = opcoes()\n",
         "\n",
         "arquivo_doador = load_workbook(\"NELSON.xlsx\")\n",
         "pagina_doador = arquivo_doador[\"Table 10\"]\n",
@@ -122,12 +218,15 @@
         "\n",
         "precos_randomizados_por_valor = {}\n",
         "\n",
-        "\n",
+        "total_nce = 0\n",
+        "total_paper = 0\n",
+        "total_grafite = 0\n",
+        "item_numero = 1\n",
         "while pagina_doador.cell(row=linha_doadora,column=2).value is not None:\n",
         "  produto = pagina_doador.cell(row=linha_doadora,column=2).value\n",
         "  un = pagina_doador.cell(row=linha_doadora,column=6).value\n",
-        "  qt = pagina_doador.cell(row=linha_doadora,column=7).value\n",
-        "  unit_nce = pagina_doador.cell(row=linha_doadora,column=8).value\n",
+        "  qt = int(pagina_doador.cell(row=linha_doadora,column=7).value)\n",
+        "  unit_nce = float(pagina_doador.cell(row=linha_doadora,column=8).value)\n",
         "\n",
         "  if unit_nce in precos_randomizados_por_valor:\n",
         "    unit_paper,unit_grafite = precos_randomizados_por_valor[unit_nce]\n",
@@ -143,27 +242,37 @@
         "  pagina_nce.cell(row=linha_ini_nce,column=3).value = un\n",
         "  pagina_nce.cell(row=linha_ini_nce,column=4).value = qt\n",
         "  pagina_nce.cell(row=linha_ini_nce,column=5).value = unit_nce\n",
+        "  total_nce = total_nce +(unit_nce*qt)\n",
         "\n",
         "\n",
         "  pagina_paper.cell(row=linha_ini_paper,column=2).value = produto\n",
         "  pagina_paper.cell(row=linha_ini_paper,column=3).value = un\n",
         "  pagina_paper.cell(row=linha_ini_paper,column=4).value = qt\n",
-        "  pagina_paper.cell(row=linha_ini_paper,column=5).value = round(unit_paper,2)\n",
-        "\n",
+        "  pagina_paper.cell(row=linha_ini_paper,column=5).value = unit_paper\n",
+        "  total_paper = total_paper +(unit_paper*qt)\n",
         "\n",
         "  pagina_grafite.cell(row=linha_ini_grafite,column=2).value = produto\n",
         "  pagina_grafite.cell(row=linha_ini_grafite,column=3).value = un\n",
         "  pagina_grafite.cell(row=linha_ini_grafite,column=4).value = qt\n",
-        "  pagina_grafite.cell(row=linha_ini_grafite,column=5).value = round(unit_grafite,2)\n",
-        "\n",
+        "  pagina_grafite.cell(row=linha_ini_grafite,column=5).value = unit_grafite\n",
+        "  total_grafite = total_grafite +(unit_grafite*qt)\n",
         "\n",
         "  pagina_controle.cell(row=linha_ini_controle,column=2).value = produto\n",
         "  pagina_controle.cell(row=linha_ini_controle,column=3).value = un\n",
         "  pagina_controle.cell(row=linha_ini_controle,column=4).value = qt\n",
         "  pagina_controle.cell(row=linha_ini_controle,column=5).value = unit_nce\n",
-        "  pagina_controle.cell(row=linha_ini_controle,column=8).value = round(unit_paper,2)\n",
-        "  pagina_controle.cell(row=linha_ini_controle,column=11).value = round(unit_grafite,2)\n",
+        "  pagina_controle.cell(row=linha_ini_controle,column=8).value = unit_paper\n",
+        "  pagina_controle.cell(row=linha_ini_controle,column=11).value = unit_grafite\n",
         "\n",
+        "  #CONSOLIDAÇÃO\n",
+        "  if opcao_consolidacao.lower() == \"s\":\n",
+        "     fazer_consolidacao(arquivo_consolidacao,item_numero,produto,un,qt,unit_nce,unit_paper,unit_grafite,diretor_escola,\n",
+        "                        nome_escola,dia_consolidacao,mes_consolidacao,ano_consolidacao,cidade_escola,cnpj_escola,total_nce,total_paper,total_grafite,meses)\n",
+        "\n",
+        "  item_numero += 1\n",
+        "\n",
+        "if opcao_recibo.lower() == \"s\":\n",
+        "  fazer_recibo(arquivo_recibo,total_nce,nome_escola,NF,dia_emitida,mes_emitida,ano_emitida,dia_recibo,mes_recibo,ano_recibo,meio_pagamento,meses)\n",
         "\n",
         "  linha_doadora +=1\n",
         "  linha_ini_grafite +=1\n",
@@ -174,7 +283,9 @@
         "arquivo_nce.save(f\"ORÇAMENTO NF{NF} {ano}-{mes}-{dia} NCE.xlsx\")\n",
         "arquivo_paper.save(f\"ORÇAMENTO NF{NF} {ano}-{mes}-{dia} PAPER&CO.xlsx\")\n",
         "arquivo_grafite.save(f\"ORÇAMENTO NF{NF} {ano}-{mes}-{dia} GRAFITE.xlsx\")\n",
-        "arquivo_controle.save(f\"MODELO DOC NF{NF}.xlsx\")\n"
+        "arquivo_controle.save(f\"MODELO DOC NF{NF}.xlsx\")\n",
+        "arquivo_consolidacao.save(f\"ORÇAMENTO NF{NF} {ano_consolidacao}-{mes_consolidacao}-{dia_consolidacao} CONSOLIDAÇÃO DE PESQ DE PREÇO\")\n",
+        "arquivo_recibo.save(f\"ORÇAMENTO NF{NF} {ano_recibo}-{mes_recibo}-{dia_recibo} RECIBO {round(total_nce,2)} NCE\")\n"
       ]
     }
   ]
