--- a/projeto-planilhas.ipynb
+++ b/projeto-planilhas.ipynb
@@ -45,6 +45,7 @@
         "import random\n",
         "from docx import Document\n",
         "from num2words import num2words\n",
+        "import sys\n",
         "\n",
         "def informacoes_iniciais(escola):\n",
         "  meses= (\"\",\"Janeiro\",\"Fevereiro\",\"Março\",\"Abril\",\"Maio\",\"Junho\",\"Julho\",\"Agosto\",\"Setembro\",\"Outubro\",\"Novembro\",\"Dezembro\")\n",
@@ -55,7 +56,7 @@
         "  mes = int(input(\"Digite a data dos orçamentos (mês): \"))\n",
         "  if mes<1 or mes>12:\n",
         "    print(\"o numero do mês está errado\")\n",
-        "    exit(0)\n",
+        "    sys.exit()\n",
         "  mes_digitado = meses[mes]\n",
         "  ano = str(input(\"Digite a data dos orçamentos (ano): \"))\n",
         "  NF = str(input(\"Digite o número da nota fiscal correspondente : \"))\n",
@@ -95,7 +96,7 @@
         "      diretor_escola = escola.cell(row=row,column = 7).value\n",
         "      return nome_escola,cnpj_escola,cep_escola,cidade_escola,endereco_escola,diretor_escola\n",
         "  print(\"Escola não encontrada\")\n",
-        "  exit(0)\n",
+        "  sys.exit()\n",
         "\n",
         "def aplicar_informacoes(pagina_escolas,nce,paper,grafite):\n",
         "  nome_escola,cnpj_escola,cep_escola,cidade_escola,endereco_escola,dia,mes,mes_digitado,ano,NF,diretor_escola,meses =informacoes_iniciais(pagina_escolas)\n",
@@ -186,29 +187,67 @@
         "      if \"<CNPJ>\" in paragrafo.text:\n",
         "        paragrafo.text = paragrafo.text.replace(\"CNPJ\",cnpj_escola)\n",
         "\n",
-        "arquivo_nce = load_workbook(\"MODELO NCE.xlsx\")\n",
+        "\n",
+        "#abertura de arquivos\n",
+        "try:\n",
+        "  arquivo_nce = load_workbook(\"MODELO NCE.xlsx\")\n",
+        "except FileNotFoundError:\n",
+        "  print(\"Arquivo MODELO NCE não encontrado. Verifique o nome e tente novamente.\")\n",
+        "  sys.exit()\n",
         "pagina_nce = arquivo_nce[\"Matriz\"]\n",
         "\n",
-        "arquivo_paper = load_workbook(\"MODELO PAPER.xlsx\")\n",
+        "try:\n",
+        "  arquivo_paper = load_workbook(\"MODELO PAPER.xlsx\")\n",
+        "except FileNotFoundError:\n",
+        "  print(f\"Arquivo MODELO PAPER não encontrado. Verifique o nome e tente novamente.\")\n",
+        "  sys.exit()\n",
         "pagina_paper = arquivo_paper.active\n",
         "\n",
-        "arquivo_grafite = load_workbook(\"MODELO GRAFITE.xlsx\")\n",
+        "try:\n",
+        "  arquivo_grafite = load_workbook(\"MODELO GRAFITE.xlsx\")\n",
+        "except FileNotFoundError:\n",
+        "  print(f\"Arquivo MODELO GRAFITE não encontrado. Verifique o nome e tente novamente.\")\n",
+        "  sys.exit()\n",
         "pagina_grafite = arquivo_grafite.active\n",
         "\n",
-        "arquivo_consolidacao = Document(\"MODELO CONSOLIDACAO.docx\")\n",
+        "try:\n",
+        "  arquivo_consolidacao = Document(\"MODELO CONSOLIDACAO.docx\")\n",
+        "except FileNotFoundError:\n",
+        "  print(f\"Arquivo MODELO CONSOLIDACAO não encontrado. Verifique o nome e tente novamente.\")\n",
+        "  sys.exit()\n",
         "\n",
-        "arquivo_recibo = Document(\"MODELO RECIBO.docx\")\n",
+        "try:\n",
+        "  arquivo_recibo = Document(\"MODELO RECIBO.docx\")\n",
+        "except FileNotFoundError:\n",
+        "  print(f\"Arquivo MODELO RECIBO não encontrado. Verifique o nome e tente novamente.\")\n",
+        "  sys.exit()\n",
         "\n",
-        "arquivo_controle = load_workbook(\"MODELO CONTROLE.xlsx\")\n",
+        "try:\n",
+        "  arquivo_controle = load_workbook(\"MODELO CONTROLE.xlsx\")\n",
+        "except FileNotFoundError:\n",
+        "  print(f\"Arquivo MODELO CONTROLE não encontrado. Verifique o nome e tente novamente.\")\n",
+        "  sys.exit()\n",
         "pagina_controle = arquivo_controle.active\n",
         "\n",
-        "arquivo_escolas = load_workbook(\"escolas.xlsx\")\n",
+        "try:\n",
+        "  arquivo_escolas = load_workbook(\"escolas.xlsx\")\n",
+        "except FileNotFoundError:\n",
+        "  print(f\"Arquivo escolas.xlsx não encontrado. Verifique o nome e tente novamente.\")\n",
+        "  sys.exit()\n",
         "pagina_escolas = arquivo_escolas.active\n",
         "dia,mes,ano,NF,diretor_escola,cidade_escola,meses,nome_escola,cnpj_escola = aplicar_informacoes(pagina_escolas,pagina_nce,pagina_paper,pagina_grafite)\n",
         "opcao_consolidacao,dia_consolidacao,mes_consolidacao,ano_consolidacao,opcao_recibo,dia_recibo,mes_recibo,ano_recibo,dia_emitida,mes_emitida,ano_emitida,meio_pagamento = opcoes()\n",
         "\n",
-        "arquivo_doador = load_workbook(\"NELSON.xlsx\")\n",
+        "nome_doador = input(\"Digite o nome do arquivo do doador (sem .xlsx): \")\n",
+        "try:\n",
+        "  arquivo_doador = load_workbook(f\"doadores/{nome_doador}.xlsx\")\n",
+        "except FileNotFoundError:\n",
+        "  print(f\"Arquivo '{nome_doador}' não encontrado. Verifique o nome e tente novamente.\")\n",
+        "  sys.exit()\n",
         "pagina_doador = arquivo_doador[\"Table 10\"]\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "linha_ini_nce = 15\n",
         "linha_ini_paper = 17\n",
@@ -280,12 +319,12 @@
         "  linha_ini_nce +=1\n",
         "  linha_ini_controle +=1\n",
         "\n",
-        "arquivo_nce.save(f\"ORÇAMENTO NF{NF} {ano}-{mes}-{dia} NCE.xlsx\")\n",
-        "arquivo_paper.save(f\"ORÇAMENTO NF{NF} {ano}-{mes}-{dia} PAPER&CO.xlsx\")\n",
-        "arquivo_grafite.save(f\"ORÇAMENTO NF{NF} {ano}-{mes}-{dia} GRAFITE.xlsx\")\n",
-        "arquivo_controle.save(f\"MODELO DOC NF{NF}.xlsx\")\n",
-        "arquivo_consolidacao.save(f\"ORÇAMENTO NF{NF} {ano_consolidacao}-{mes_consolidacao}-{dia_consolidacao} CONSOLIDAÇÃO DE PESQ DE PREÇO\")\n",
-        "arquivo_recibo.save(f\"ORÇAMENTO NF{NF} {ano_recibo}-{mes_recibo}-{dia_recibo} RECIBO {round(total_nce,2)} NCE\")\n"
+        "arquivo_nce.save(f\"arquivos/ORÇAMENTO NF{NF} {ano}-{mes}-{dia} NCE.xlsx\")\n",
+        "arquivo_paper.save(f\"arquivos/ORÇAMENTO NF{NF} {ano}-{mes}-{dia} PAPER&CO.xlsx\")\n",
+        "arquivo_grafite.save(f\"arquivos/ORÇAMENTO NF{NF} {ano}-{mes}-{dia} GRAFITE.xlsx\")\n",
+        "arquivo_controle.save(f\"arquivos/MODELO DOC NF{NF}.xlsx\")\n",
+        "arquivo_consolidacao.save(f\"arquivos/ORÇAMENTO NF{NF} {ano_consolidacao}-{mes_consolidacao}-{dia_consolidacao} CONSOLIDAÇÃO DE PESQ DE PREÇO\")\n",
+        "arquivo_recibo.save(f\"arquivos/ORÇAMENTO NF{NF} {ano_recibo}-{mes_recibo}-{dia_recibo} RECIBO {round(total_nce,2)} NCE\")\n"
       ]
     }
   ]
