--- a/projeto-planilhas.ipynb
+++ b/projeto-planilhas.ipynb
@@ -47,6 +47,8 @@
         "from num2words import num2words\n",
         "import sys\n",
         "\n",
+        "def formatar_reais(valor):\n",
+        "  return f\"{valor:,.2f}\".replace(\",\",\"v\").replace(\".\",\",\").replace(\"v\",\".\")\n",
         "def informacoes_iniciais(escola):\n",
         "  meses= (\"\",\"Janeiro\",\"Fevereiro\",\"Março\",\"Abril\",\"Maio\",\"Junho\",\"Julho\",\"Agosto\",\"Setembro\",\"Outubro\",\"Novembro\",\"Dezembro\")\n",
         "  cnpj_buscar = str(input(\"Digite o CNPJ da escola que deseja bucar(sem . ou /, ex:123456789) : \"))\n",
@@ -64,11 +66,18 @@
         "\n",
         "def opcoes():\n",
         "  dia_emitida = mes_emitida = ano_emitida = None\n",
+        "  dia_consolidacao = mes_consolidacao = ano_consolidacao = None\n",
+        "  dia_recibo = mes_recibo = ano_recibo = None\n",
+        "  dia_emitida = mes_emitida = ano_emitida = None\n",
+        "  meio_pagamento = None\n",
         "  opcao_consolidacao = str(input(\"Você quer consolidação? (S/N) \"))\n",
         "  if opcao_consolidacao.lower() == \"s\":\n",
         "    dia_consolidacao = int(input(\"Digite a data da consolidação (dia): \"))\n",
         "    mes_consolidacao = int(input(\"Digite a data da consolidação (mês): \"))\n",
         "    ano_consolidacao = str(input(\"Digite a data da consolidação (ano): \"))\n",
+        "  else:\n",
+        "    print(\"Opção inválida,configurando como NÃO\")\n",
+        "    opcao_consolidacao = \"n\"\n",
         "\n",
         "\n",
         "  opcao_recibo = str(input(\"Você quer recibo? (S/N) \"))\n",
@@ -77,11 +86,14 @@
         "    mes_recibo = int(input(\"Digite a data do recibo (mês): \"))\n",
         "    ano_recibo = str(input(\"Digite a data do recibo (ano): \"))\n",
         "    nota = str(input(\"a data que a nota foi emitida é a mesma do recibo? (S/N)\"))\n",
+        "    meio_pagamento = str(input(\"Pago por meio de:  \"))\n",
         "    if nota.lower() == \"n\":\n",
         "      dia_emitida = int(input(\"Digite a data da emissão (dia): \"))\n",
         "      mes_emitida = int(input(\"Digite a data da emissão (mês): \"))\n",
         "      ano_emitida = int(input(\"Digite a data da emissão (ano): \"))\n",
-        "  meio_pagamento = str(input(\"Pago por meio de:  \"))\n",
+        "  else:\n",
+        "    print(\"Opção inválida,configurando como NÃO\")\n",
+        "    opcao_recibo = \"n\"\n",
         "  return opcao_consolidacao,dia_consolidacao,mes_consolidacao,ano_consolidacao,opcao_recibo,dia_recibo,mes_recibo,ano_recibo,dia_emitida,mes_emitida,ano_emitida,meio_pagamento\n",
         "\n",
         "def buscar_escola(escola,buscador):\n",
@@ -132,13 +144,13 @@
         "def fazer_recibo(arquivo_recibo,total_nce,nome_escola,NF,dia_emitida,mes_emitida,ano_emitida,dia_recibo,mes_recibo,ano_recibo,meio_pagamento,meses):\n",
         "  for paragrafo in arquivo_recibo.paragraphs:\n",
         "    if \"<VALOR>\" in paragrafo.text:\n",
-        "      paragrafo.text = paragrafo.text.replace(\"<VALOR>\",round(total_nce,2))\n",
+        "      paragrafo.text = paragrafo.text.replace(\"<VALOR>\",str(formatar_reais(total_nce)))\n",
         "    if \"<EXTENSO>\" in paragrafo.text:\n",
         "      paragrafo.text = paragrafo.text.replace(\"<EXTENSO>\",numero_por_extenso(float(total_nce)))\n",
         "    if \"<NOME>\" in paragrafo.text:\n",
         "      paragrafo.text = paragrafo.text.replace(\"<NOME>\",nome_escola)\n",
         "    if \"<NF>\" in paragrafo.text:\n",
-        "      paragrafo.text = paragrafo.text.replace(\"<NF>\",NF)\n",
+        "      paragrafo.text = paragrafo.text.replace(\"<NF>\",str(NF))\n",
         "    if \"<DATA_EMISSÃO>\" in paragrafo.text:\n",
         "      if dia_emitida and mes_emitida and ano_emitida:\n",
         "        paragrafo.text = paragrafo.text.replace(\"<DATA_EMISSÃO>\",f\"{dia_emitida}/{mes_emitida}/{ano_emitida}\")\n",
@@ -149,21 +161,21 @@
         "    if \"<DATA>\" in paragrafo.text:\n",
         "      paragrafo.text = paragrafo.text.replace(\"<DATA>\",f\"{dia_recibo}/{mes_recibo}/{ano_recibo}\")\n",
         "    if \"<DIA>\" in paragrafo.text:\n",
-        "      paragrafo.text = paragrafo.text.replace(\"<DIA>\",dia_recibo)\n",
+        "      paragrafo.text = paragrafo.text.replace(\"<DIA>\",str(dia_recibo))\n",
         "    if \"<MÊS>\" in paragrafo.text:\n",
-        "      paragrafo.text = paragrafo.text.replace(\"<MÊS>\",meses[mes_recibo])\n",
+        "      paragrafo.text = paragrafo.text.replace(\"<MÊS>\",str(meses[mes_recibo]))\n",
         "    if \"<ANO>\" in paragrafo.text:\n",
-        "      paragrafo.text = paragrafo.text.replace(\"<ANO>\",ano_recibo)\n",
+        "      paragrafo.text = paragrafo.text.replace(\"<ANO>\",str(ano_recibo))\n",
         "\n",
         "def fazer_consolidacao(arquivo_consolidacao,item_numero,produto,un,qt,unit_nce,unit_paper,unit_grafite,diretor_escola,\n",
         "                       nome_escola,dia_consolidacao,mes_consolidacao,ano_consolidacao,cidade_escola,cnpj_escola,total_nce,total_paper,total_grafite,meses):\n",
         "    for paragrafo in arquivo_consolidacao.paragraphs:\n",
         "      if f\"<VALOR{item_numero}>\" in paragrafo.text:\n",
         "        paragrafo.text = paragrafo.text.replace(f\"<VALOR{item_numero}\",str(produto))\n",
-        "      if f\"<UNIT{item_numero}>\" in paragrafo.text:\n",
-        "        paragrafo.text = paragrafo.text.replace(f\"<UNIT{item_numero}\",str(un))\n",
-        "      if f\"<QUANT{item_numero}>\" in paragrafo.text:\n",
-        "        paragrafo.text = paragrafo.text.replace(f\"<QUANT{item_numero}\",str(qt))\n",
+        "      if f\"<UNI{item_numero}>\" in paragrafo.text:\n",
+        "        paragrafo.text = paragrafo.text.replace(f\"<UNI{item_numero}\",str(un))\n",
+        "      if f\"<Q{item_numero}>\" in paragrafo.text:\n",
+        "        paragrafo.text = paragrafo.text.replace(f\"<Q{item_numero}\",str(qt))\n",
         "      if f\"<VALOR_A{item_numero}>\" in paragrafo.text:\n",
         "        paragrafo.text = paragrafo.text.replace(f\"<VALOR_A{item_numero}\",str(unit_nce))\n",
         "      if f\"<VALOR_B{item_numero}>\" in paragrafo.text:\n",
@@ -177,11 +189,11 @@
         "      if \"<DATA>\" in paragrafo.text:\n",
         "        paragrafo.text = paragrafo.text.replace(\"DATA\",f\"{dia_consolidacao} de {meses[mes_consolidacao]} de {ano_consolidacao}\")\n",
         "      if \"<TOTAL_A>\" in paragrafo.text:\n",
-        "        paragrafo.text = paragrafo.text.replace(\"TOTAL_A\",round(total_nce,2))\n",
+        "        paragrafo.text = paragrafo.text.replace(\"TOTAL_A\",str(formatar_reais(total_nce)))\n",
         "      if \"<TOTAL_B>\" in paragrafo.text:\n",
-        "        paragrafo.text = paragrafo.text.replace(\"TOTAL_B\",total_paper)\n",
+        "        paragrafo.text = paragrafo.text.replace(\"TOTAL_B\",str(formatar_reais(total_paper)))\n",
         "      if \"<TOTAL_C>\" in paragrafo.text:\n",
-        "        paragrafo.text = paragrafo.text.replace(\"TOTAL_C\",total_grafite)\n",
+        "        paragrafo.text = paragrafo.text.replace(\"TOTAL_C\",str(formatar_reais(total_grafite)))\n",
         "      if \"<NOME>\" in paragrafo.text:\n",
         "        paragrafo.text = paragrafo.text.replace(\"NOME\",nome_escola)\n",
         "      if \"<CNPJ>\" in paragrafo.text:\n",
@@ -262,6 +274,7 @@
         "total_grafite = 0\n",
         "item_numero = 1\n",
         "while pagina_doador.cell(row=linha_doadora,column=2).value is not None:\n",
+        "  print(f\"Processando produto {item_numero} . . .\",end = \"\\r\",flush=True)\n",
         "  produto = pagina_doador.cell(row=linha_doadora,column=2).value\n",
         "  un = pagina_doador.cell(row=linha_doadora,column=6).value\n",
         "  qt = int(pagina_doador.cell(row=linha_doadora,column=7).value)\n",
@@ -272,7 +285,7 @@
         "  else:\n",
         "   unit_paper = unit_nce * (1+ random.uniform(0.15,0.25))\n",
         "   unit_grafite = unit_nce * (1+ random.uniform(0.15,0.25))\n",
-        "   while abs(unit_paper - unit_grafite)< 0.10:\n",
+        "   while abs(unit_paper - unit_grafite)< 0.05:\n",
         "     unit_grafite = unit_nce * (1+ random.uniform(0.15,0.25))\n",
         "   precos_randomizados_por_valor[unit_nce] = unit_paper,unit_grafite\n",
         "\n",
@@ -309,22 +322,27 @@
         "                        nome_escola,dia_consolidacao,mes_consolidacao,ano_consolidacao,cidade_escola,cnpj_escola,total_nce,total_paper,total_grafite,meses)\n",
         "\n",
         "  item_numero += 1\n",
-        "\n",
-        "if opcao_recibo.lower() == \"s\":\n",
-        "  fazer_recibo(arquivo_recibo,total_nce,nome_escola,NF,dia_emitida,mes_emitida,ano_emitida,dia_recibo,mes_recibo,ano_recibo,meio_pagamento,meses)\n",
-        "\n",
         "  linha_doadora +=1\n",
         "  linha_ini_grafite +=1\n",
         "  linha_ini_paper +=1\n",
         "  linha_ini_nce +=1\n",
         "  linha_ini_controle +=1\n",
         "\n",
+        "if opcao_recibo.lower() == \"s\":\n",
+        "  fazer_recibo(arquivo_recibo,total_nce,nome_escola,NF,dia_emitida,mes_emitida,ano_emitida,dia_recibo,mes_recibo,ano_recibo,meio_pagamento,meses)\n",
+        "\n",
+        "\n",
+        "\n",
+        "print(\"Processo finalizado!\")\n",
+        "\n",
         "arquivo_nce.save(f\"arquivos/ORÇAMENTO NF{NF} {ano}-{mes}-{dia} NCE.xlsx\")\n",
         "arquivo_paper.save(f\"arquivos/ORÇAMENTO NF{NF} {ano}-{mes}-{dia} PAPER&CO.xlsx\")\n",
         "arquivo_grafite.save(f\"arquivos/ORÇAMENTO NF{NF} {ano}-{mes}-{dia} GRAFITE.xlsx\")\n",
         "arquivo_controle.save(f\"arquivos/MODELO DOC NF{NF}.xlsx\")\n",
-        "arquivo_consolidacao.save(f\"arquivos/ORÇAMENTO NF{NF} {ano_consolidacao}-{mes_consolidacao}-{dia_consolidacao} CONSOLIDAÇÃO DE PESQ DE PREÇO\")\n",
-        "arquivo_recibo.save(f\"arquivos/ORÇAMENTO NF{NF} {ano_recibo}-{mes_recibo}-{dia_recibo} RECIBO {round(total_nce,2)} NCE\")\n"
+        "if opcao_consolidacao.lower() == \"s\":\n",
+        "  arquivo_consolidacao.save(f\"arquivos/ORÇAMENTO NF{NF} {ano_consolidacao}-{mes_consolidacao}-{dia_consolidacao} CONSOLIDAÇÃO DE PESQ DE PREÇO\")\n",
+        "if opcao_recibo.lower() == \"s\":\n",
+        "  arquivo_recibo.save(f\"arquivos/ORÇAMENTO NF{NF} {ano_recibo}-{mes_recibo}-{dia_recibo} RECIBO {round(total_nce,2)} NCE\")\n"
       ]
     }
   ]
