--- a/projeto-planilhas.ipynb
+++ b/projeto-planilhas.ipynb
@@ -42,6 +42,7 @@
       ],
       "source": [
         "from openpyxl import load_workbook\n",
+        "from openpyxl.drawing.image import Image\n",
         "import random\n",
         "from docx import Document\n",
         "from num2words import num2words\n",
@@ -207,6 +208,15 @@
         "  print(\"Arquivo MODELO NCE não encontrado. Verifique o nome e tente novamente.\")\n",
         "  sys.exit()\n",
         "pagina_nce = arquivo_nce[\"Matriz\"]\n",
+        "img_nce1 = Image(\"logos/nce1.png\")\n",
+        "img_nce2 = Image(\"logos/nce2.jpeg\")\n",
+        "img_nce1.height = 56\n",
+        "img_nc1.width = 352\n",
+        "img_nce2.height = 51\n",
+        "img_nc2.width = 96\n",
+        "pagina_nce.add_image(img_nce1,\"D1\")\n",
+        "pagina_nce.add_image(img_nce2,\"B2\")\n",
+        "\n",
         "\n",
         "try:\n",
         "  arquivo_paper = load_workbook(\"MODELO PAPER.xlsx\")\n",
@@ -214,6 +224,10 @@
         "  print(f\"Arquivo MODELO PAPER não encontrado. Verifique o nome e tente novamente.\")\n",
         "  sys.exit()\n",
         "pagina_paper = arquivo_paper.active\n",
+        "img_paper = Image(\"logos/paper.png\")\n",
+        "img_paper.width = 196\n",
+        "img_paper.height = 80\n",
+        "pagina_paper.add_image(img_paper,\"B1\")\n",
         "\n",
         "try:\n",
         "  arquivo_grafite = load_workbook(\"MODELO GRAFITE.xlsx\")\n",
@@ -221,7 +235,10 @@
         "  print(f\"Arquivo MODELO GRAFITE não encontrado. Verifique o nome e tente novamente.\")\n",
         "  sys.exit()\n",
         "pagina_grafite = arquivo_grafite.active\n",
-        "\n",
+        "img_grafite = Image(\"logos/grafite.png\")\n",
+        "img_grafite.width = 578\n",
+        "img_grafite.height = 51\n",
+        "pagina_grafite.add_image(img_grafite,\"A1\")\n",
         "try:\n",
         "  arquivo_consolidacao = Document(\"MODELO CONSOLIDACAO.docx\")\n",
         "except FileNotFoundError:\n",
