--- a/projeto-planilhas.ipynb
+++ b/projeto-planilhas.ipynb
@@ -1,27 +1,13 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "25Kqc41vhdrx",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "25Kqc41vhdrx",
         "outputId": "8bb7f505-a7c4-438c-feb2-5846e22954eb"
       },
       "outputs": [
@@ -300,8 +286,8 @@
         "  if unit_nce in precos_randomizados_por_valor:\n",
         "    unit_paper,unit_grafite = precos_randomizados_por_valor[unit_nce]\n",
         "  else:\n",
-        "   unit_paper = unit_nce * (1+ random.uniform(0.15,0.25))\n",
-        "   unit_grafite = unit_nce * (1+ random.uniform(0.15,0.25))\n",
+        "   unit_paper = round(unit_nce * (1+ random.uniform(0.15,0.25))*20)/20\n",
+        "   unit_grafite = round(unit_nce * (1+ random.uniform(0.15,0.25))*20)/20\n",
         "   while abs(unit_paper - unit_grafite)< 0.05:\n",
         "     unit_grafite = unit_nce * (1+ random.uniform(0.15,0.25))\n",
         "   precos_randomizados_por_valor[unit_nce] = unit_paper,unit_grafite\n",
@@ -362,5 +348,19 @@
         "  arquivo_recibo.save(f\"arquivos/ORÇAMENTO NF{NF} {ano_recibo}-{mes_recibo}-{dia_recibo} RECIBO {round(total_nce,2)} NCE\")\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
